--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>alexaca79.GitHub.io</h1>
-        <p></p>
+        <h1>Alexander Chen</h1>
+        <p>Hi! I'm Alex. Welcome to my Portfolio</p>
 
 
-        <p class="view"><a href="https://github.com/alexaca79">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/alexaca79">View My GitHub</a></p>
 
       </header>
       <section>
-        <p>Coming soon to an internet near you </p>
+        <p>Coming soon to an internet near you!</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
