--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <li>Version Control and Agile Development using Git</li>
               <li>Spatial data analysis and cartography: ArcGIS, ArcGIS Online, QGIS</li>
               <li>Basic Web Development and Data Visualization: HTML, CSS, Javascript, R Shiny</li>
-              <li>Planning Events: Hackathons, CivicTech TO, Code Across,Ontario Pubilc Service Code Day </li>
+              <li>Planning and Maintaining Communities and Events: Hackathons, CivicTech TO, Code Across,Ontario Pubilc Service Code Day </li>
               <li>Policy Analysis: policy cycle analysis, connecting analytics to policy development </li>
           </p>     
 
