--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
           <p>
               <li>Data analysis: R (Tidyverse, Forecast, caret) and Python</li>
               <li>Business intelligence tools: Cognos, Microsoft Power BI </li>
-              <li>Version Control and Agile Development using Git</li>
+              <li>Version control and agile development using Git</li>
               <li>Spatial data analysis and cartography: ArcGIS, ArcGIS Online, QGIS</li>
-              <li>Basic Web Development and Data Visualization: HTML, CSS, Javascript, R Shiny</li>
-              <li>Planning and Maintaining Communities and Events: Hackathons, CivicTech TO, Code Across,Ontario Pubilc Service Code Day </li>
-              <li>Policy Analysis: policy cycle analysis, connecting analytics to policy development </li>
+              <li>Basic web development and data visualization: HTML, CSS, Javascript, R Shiny</li>
+              <li>Planning and maintaining community organizations and events: Hackathons, CivicTech TO, Code Across,Ontario Pubilc Service Code Day </li>
+              <li>Policy analysis: policy cycle analysis, connecting analytics to policy development </li>
           </p>     
 
           <h4>The Things I Want to Be Good at in My Life</h4>
           <p>
-          <li>Being a Data Scientist and creating insights</li>
-          <li>Building Great Communities that Support Each Other</li>
+          <li>Being a data scientist and creating insights</li>
+          <li>Building great communities that support each other</li>
           <li>Cooking delicious food </li>
           <li>Photoing all the stuff! <- Fujifilm for life</li>
           </p>
@@ -70,7 +70,7 @@
           <p>
           <li>Corgies</li>
           <li>Kayaks</li>
-          <li>A place where I can launch a Kayak</li> 
+          <li>A place where I can launch a my kayak</li> 
           </p>
 
 
