--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <section>
       <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR-0-MmGcabFYbJcmG1KvkAEieyXRlAlVdRxWOr1P4VbCbpxOOcKlryVRAcg6m_VIDj8jDcg-7-UuBz/embed?start=false&loop=false&delayms=60000" frameborder="0" width="480" height="389" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
           
-          <h4>The Things I Can Do Now </h4>
+          <h4>The things I can do now </h4>
           <p>
-              <li>Data analysis: R (Tidyverse, Forecast, caret) and Python</li>
+              <li>Data analysis and Visualization: R (Tidyverse, Forecast, caret) and Python</li>
               <li>Business intelligence tools: Cognos, Microsoft Power BI </li>
               <li>Version control and agile development using Git</li>
               <li>Spatial data analysis and cartography: ArcGIS, ArcGIS Online, QGIS</li>
@@ -58,7 +58,7 @@
               <li>Policy analysis: policy cycle analysis, connecting analytics to policy development </li>
           </p>     
 
-          <h4>The Things I Want to Be Good at in My Life</h4>
+          <h4>The things I want to be good at in my life</h4>
           <p>
           <li>Being a data scientist and creating insights</li>
           <li>Building great communities that support each other</li>
@@ -66,7 +66,7 @@
           <li>Photoing all the stuff! <- Fujifilm for life</li>
           </p>
 
-          <h4>The Three Things I want in life</h4>
+          <h4>The Three things I want in life</h4>
           <p>
           <li>Corgies</li>
           <li>Kayaks</li>
@@ -74,7 +74,7 @@
           </p>
 
 
-        
+          <p>"It's chaos. Be kind." - Michelle McNamara </p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
