--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li>Photoing all the stuff! <- Fujifilm for life</li>
           </p>
 
-          <h4>The Three things I want in life</h4>
+          <h4>The three things I want in life</h4>
           <p>
           <li>Corgies</li>
           <li>Kayaks</li>
